[project]
name = "hayagriva"
version = "0.1.0"
description = "Modular Retrieval-Augmented Generation (RAG) framework."
authors = [{name = "Hayagriva Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sentence-transformers",
    "faiss-cpu",
    "openai>=1.0.0",
    "gradio"
]

[project.urls]
Homepage = "https://github.com/"

[project.scripts]
hayagriva = "hayagriva.cli.cli:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
known_first_party = ["hayagriva"]
line_length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
