[project]
name = "hayagriva"
version = "0.1.0"
description = "Modular Retrieval-Augmented Generation (RAG) framework."
authors = [{ name = "Hayagriva Team" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "sentence-transformers",
    "faiss-cpu",
    "openai>=1.0.0",
    "groq",
    "gradio>=4.0",
]

[project.urls]
Homepage = "https://github.com/rajsimpi-ai/hayagriva"

[project.scripts]
hayagriva = "hayagriva.cli.cli:main"

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hayagriva*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
known_first_party = ["hayagriva"]
line_length = 100
